本次在原来代码的基础做了进一步的完善，对沙盒代码应对恶意代码的攻击，采用了一些安全措施